--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -71,25 +71,25 @@ body {
     margin: auto;
 }
 
-.progress {
+input.progress {
     width: 100%;
     -webkit-appearance: none; /* Loại bỏ giao diện mặc định của toàn bộ input[type="range"]*/
-    /* height: 6px; */
-    /* background: #D3D437; */
+    height: 6px;
        width: 100%;
-    height: 17px;
+    /* height: 17px; */
     background: #f27ace66;
-    outline: none;
+    /* outline: none; */
     opacity: 0.7;
     -webkit-transition: 0.2s;
     transition: opacity 0.2s;
+    
 }
 
 .progress::-webkit-slider-thumb { /*Lớp giả để tùy chỉnh nút kéo*/
     -webkit-appearance: none; /*Loại bỏ kiểu mặc định của phần nút kéo (thumb) trên thanh trượt */
     appearance: none; /*Nên dùng kèm theo để hỗ trợ các trình duyệt mới*/
-    width: 12px;
-    height:10px;
+    width: 8px;
+    height:6px;
     background-color: rgb(0, 0, 0);
     cursor: pointer;
 }
@@ -140,7 +140,8 @@ body {
   background-color: #fff;
   padding: 8px 16px;
   border-radius: 5px;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.1);
+
 }
 
 .song.active {
